--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-cloudinary": "^4.27.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,7 +48,7 @@
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "prisma": "^5.2.0",
+    "prisma": "^5.4.2",
     "typescript": "^5.2.2"
   }
 }
